--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/boat.jpg":["assets/images/boat.jpg"],"assets/images/border_collie.jpg":["assets/images/border_collie.jpg"],"assets/images/github_profile.png":["assets/images/github_profile.png"],"assets/images/moon.jpg":["assets/images/moon.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
